--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,5 @@
-<header>
-    <h1>My Product</h1>
+<header class="bg-dark text-white text-center py-3">
     <nav>
-        <a href="/">Home</a>
-        
+        <a class="text-white mx-2" href="/">Home</a>
     </nav>
 </header>
