--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,3 @@
-<footer>
-    <p>© 2024 My Product Site.</p>
+<footer class="bg-dark text-white text-center py-3">
+    <p>© 2024 Your Website</p>
 </footer>
