--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,7 +16,7 @@
                     <img src="{{this.image}}" alt="{{this.name}}">
                     <h3>{{this.name}}</h3>
                     <p>{{this.description}}</p>
-                    <p>Price: {{this.price}}</p>
+                    <p class="product-price">Price: {{this.price}}</p>
                     <a href="/product/{{this.id}}">View Details</a>
                 </div>
             {{/each}}
